Clearing files from tests

--- a/Momiji V5/Resources/ConsoleHeader.html
+++ b/Momiji V5/Resources/ConsoleHeader.html
@@ -132,6 +132,7 @@
         &nbsp&nbspUsing&nbspGNU&nbspUnifont&nbsptrutype&nbspfont&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspd88P&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspby&nbspKrystian&nbspPawełek<br />
         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp888P"&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(kirun9)<br />
     </div><br />
+    <div class="logo">Momiji V<MomijiVersion /></div><br />
     <div id="LogTable">
 
     </div>
