CHanged HTML structure and server

--- a/Momiji V5/Resources/ConsoleHeader.html
+++ b/Momiji V5/Resources/ConsoleHeader.html
@@ -3,120 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <style>
-        table {
-            width: 640px;
-            max-width: 640px;
-            min-width: 640px;
-            color: white;
-            font: 12pt Unifont, Arial;
-            table-layout: fixed;
-        }
-
-        div.logo {
-            font: 12pt Unifont;
-            color: yellow;
-        }
-
-        .bold {
-            font-weight: bold;
-        }
-
-        .row1 {
-            white-space: nowrap;
-            vertical-align: text-top;
-            min-width: 70px;
-            max-width: 70px;
-        }
-
-        .row2 {
-            vertical-align: text-top;
-            min-width: 120px;
-            max-width: 120px;
-            word-wrap: break-word;
-        }
-
-        .row3 {
-            vertical-align: text-top;
-            max-width: 450px;
-            max-width: 450px;
-            word-wrap: break-word;
-        }
-
-        .multirow {
-            vertical-align: text-top;
-            max-width: 640px;
-            min-width: 640px;
-            word-wrap: break-word;
-        }
-
-        .error {
-            color: red;
-        }
-
-        .warning {
-            color: yellow;
-        }
-
-        .user {
-            color: aqua;
-        }
-
-        .module {
-            color: orange;
-        }
-
-    </style>
-    <script type="text/javascript">
-        var httpRequestStatus;
-        var timestep = 5000;
-
-        function init() {
-            "use strict";
-            startLoop();
-        }
-
-        function getRequest() {
-            "use strict";
-            try {
-                return new ActiveXObject("Msxml2.XMLHTTP");
-            } catch (e) {
-                try {
-                    return new ActiveXObject("Microsoft.XMLHTTP");
-                } catch (err) { }
-            }
-            if (typeof XMLHttpRequest !== "undefined") {
-                return new XMLHttpRequest();
-            }
-            return null;
-        }
-
-        function startLoop() {
-            "use strict";
-
-            if (!httpRequestStatus || httpRequestStatus.readyState === 0) {
-                httpRequestStatus = getRequest();
-                try {
-                    httpRequestStatus.open("GET", "http://localhost:12369/log.html", true);
-                    httpRequestStatus.onreadystatechange = done;
-                    httpRequestStatus.send(null);
-                } catch (e) {
-                    alert(e);
-                }
-            }
-            setTimeout(startLoop, timestep);
-        }
-
-        function done() {
-            if (httpRequestStatus && httpRequestStatus.readyState === 4) {
-                var element = document.getElementById("LogTable");
-                if (element) {
-                    element.innerHTML = httpRequestStatus.responseText;
-                }
-                httpRequestStatus = null;
-            }
-        }
-    </script>
+    <link rel="stylesheet" href="console/ConsoleStyle.css" />
+    <script src="console/ConsoleScript.js"></script>
 </head>
 <body style="background-color: black; color: white;" onload="init()">
     <div class="logo">
