Added saving logs to file - html tags are completed after closing application

--- a/Momiji V5/Resources/ConsoleHeader.html
+++ b/Momiji V5/Resources/ConsoleHeader.html
@@ -21,6 +21,7 @@
         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp888P"&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(kirun9)<br />
     </div><br />
     <div class="logo">Momiji V<MomijiVersion /></div><br />
+    <div class="logo"><Date /></div><br />
     <div id="LogTable">
 
     </div>
