--- a/Momiji V5/Resources/ConsoleHeader.html
+++ b/Momiji V5/Resources/ConsoleHeader.html
@@ -20,7 +20,8 @@
         &nbsp&nbspUsing&nbspGNU&nbspUnifont&nbsptrutype&nbspfont&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspd88P&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspby&nbspKrystian&nbspPawełek<br />
         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp888P"&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(kirun9)<br />
     </div><br />
-    <div class="logo">Momiji V<MomijiVersion /></div><br />
+    <div class="logo">Momiji V<MomijiVersion /></div>
+    <div class="logo inline" id="consoleVersion">WebConsole </div><div class="logo inline"> by kirun9</div><br /><br />
     <div class="logo"><Date /></div><br />
     <div id="LogTable">
 
